# hypegauss

./: CMakeLists.txt  README.md  gen_erfinv_c.py  zigg_solver.m
include/: hiperfgauss.h
src/: hiperfgauss.c
test/: CMakeLists.txt  hpgs_tests.c
